--- a/.gitattributes
+++ b/.gitattributes
@@ -25,6 +25,7 @@
 *.woff2 binary
 
 # Omit during export.
+/sass export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
