--- a/package.json
+++ b/package.json
@@ -4,33 +4,33 @@
   "version": "1.0.0",
   "private": true,
   "author": {
-    "name": "Elevate360",
-    "email": "elevate360@gmail.com",
-    "url": "https://elevate360.com.au/"
+    "name": "Campaign Kit",
+    "email": "support@campaignkit.co",
+    "url": "https://campaignkit.co/"
   },
   "license": {
     "type": "GPL-2.0+",
     "url": "http://www.gnu.org/licenses/gpl-2.0.html"
   },
   "main": "Gruntfile.js",
+  "scripts": {
+    "dist": "grunt dist && git archive -o baltic.1.0.0.zip HEAD"
+  },
   "devDependencies": {
-    "autoprefixer": "^7.2.5",
-    "grunt": "^1.0.1",
+    "autoprefixer": "^7.2.6",
+    "grunt": "^1.0.2",
     "grunt-checktextdomain": "^1.0.1",
     "grunt-combine-media-queries": "^1.0.20",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.9.0",
-    "grunt-sass": "^2.0.0",
+    "grunt-sass": "^2.1.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-wp-css": "^0.2.1",
-    "grunt-wp-i18n": "^1.0.1",
+    "grunt-wp-i18n": "^1.0.2",
     "node-sass": "^4.7.2"
   }
 }
