reverse grunjs configuration

--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "url": "http://www.gnu.org/licenses/gpl-2.0.html"
   },
   "main": "Gruntfile.js",
-  "scripts": {
-    "dist": "grunt dist && git archive -o baltic.1.0.0.zip HEAD"
-  },
   "devDependencies": {
-    "autoprefixer": "^7.2.6",
+    "autoprefixer": "^8.2.0",
     "grunt": "^1.0.2",
     "grunt-checktextdomain": "^1.0.1",
     "grunt-combine-media-queries": "^1.0.20",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^3.3.0",
@@ -31,6 +31,6 @@
     "grunt-text-replace": "^0.4.0",
     "grunt-wp-css": "^0.2.1",
     "grunt-wp-i18n": "^1.0.2",
-    "node-sass": "^4.7.2"
+    "node-sass": "^4.8.3"
   }
 }
