--- a/.gitattributes
+++ b/.gitattributes
@@ -26,6 +26,9 @@
 
 # Omit during export.
 /sass export-ignore
+/vendor export-ignore
+composer.json
+composer.lock
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
