--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
     "type": "GPL-2.0+",
     "url": "http://www.gnu.org/licenses/gpl-2.0.html"
   },
+  "scripts": {
+    "build": "cross-var git archive --prefix baltic/ -o baltic.$npm_package_version.zip v.$npm_package_version"
+  },
   "main": "Gruntfile.js",
   "devDependencies": {
-    "autoprefixer": "^8.5.0",
-    "grunt": "^1.0.2",
+    "autoprefixer": "^8.6.4",
+    "cross-var": "^1.1.0",
+    "grunt": "^1.0.3",
     "grunt-checktextdomain": "^1.0.1",
     "grunt-combine-media-queries": "^1.0.20",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-postcss": "^0.9.0",
     "grunt-rtlcss": "^2.0.1",
-    "grunt-sass": "^2.1.0",
+    "grunt-sass": "^3.0.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-wp-css": "^0.2.1",
     "grunt-wp-readme-to-markdown": "^2.0.1",
